fix some x overflow and issues

--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -35,7 +35,8 @@
     --text-medium: 2.4em;
     --text-base: 1.6em;
     --text-small: 1.6em;
-    --text-xxsmall: .8em
+    --text-xsmall: 1em;
+    --text-xxsmall: .8em;
 }
 
 $color: (
